Fixed compilation problems